--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-load-plugins": "^1.4.0",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-stylus": "^2.6.0"
   }
