--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "comparision calc",
   "main": "gulpfile.js",
   "scripts": {
+    "start": "gulp dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,7 +26,8 @@
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.9.1",
-    "gulp-stylus": "^2.6.0"
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-stylus": "^2.6.0",
+    "materialize-css": "^0.98.2"
   }
 }
