--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browser-sync": "^2.18.6",
     "del": "^2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-load-plugins": "^1.4.0",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.2.0",
